--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
         <div class="logo"><img src="../data/logo.png" width="200px"></div>
         <nav>
-            <a class="inter-light" href="contact.html">CONTACTE-NOS</a>
-            <a class="inter-light" href="contact.html">RESERVE JÁ</a>
+            <a class="inter-light scroll-to-bottom" href="#bottom">CONTACTE-NOS</a>
+            <a class="inter-light scroll-to-bottom" href="#bottom">RESERVE JÁ</a>
         </nav>
     </header>
 
@@ -32,21 +32,20 @@
         </div>
         <div class="banner-video">
             <video autoplay muted>
-                <source src="https://fojeportfolio.s3.eu-north-1.amazonaws.com/DJI_0040.MOV" type="video/mp4">
+                <source src="https://fojeportfolio.s3.eu-north-1.amazonaws.com/Casa+Valverde.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
     </section>
-
     <section class="reserve">
         <div class="libre-caslon-bold" id="reserve">
             <h2 class="padding libre-caslon-text-regular">Faça já a sua reserva.</h2>
         </div>
         <div class="button">
-            <a class="inter-light" href="contact.html">RESERVE AGORA</a>
+            <a href="#bottom" class="inter-light scroll-to-bottom">RESERVE AGORA</a>
         </div>
     </section>
-    <section class="banner2 padding  padding-top" >
+    <section class="banner2 padding  padding-top">
         <div class="banner-image">
             <img src="../data/1.jpg" alt="Image 0">
         </div>
@@ -65,7 +64,9 @@
 
         <div class="banner-text">
             <h1 class="libre-caslon-text-regular">As Redondezas</h1>
-            <p class="inter-thin">Explore as maravilhas naturais da região, incluindo a Serra da Freita, a encantadora aldeia de Trilhadouro e a impressionante Barragem Eng. Duarte Pacheco, todos a uma curta distância da nossa casa. Venha desfrutar da paz e da beleza que a Casa Valverde tem para lhe oferecer.
+            <p class="inter-thin">Explore as maravilhas naturais da região, incluindo a Serra da Freita, a encantadora
+                aldeia de Trilhadouro e a impressionante Barragem Eng. Duarte Pacheco, todos a uma curta distância da
+                nossa casa. Venha desfrutar da paz e da beleza que a Casa Valverde tem para lhe oferecer.
             </p>
         </div>
         <div class="banner-image">
@@ -108,7 +109,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="contact">
+    <section class="contact" id="bottom">
         <div class="contact-map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3017.5183205332983!2d-8.357267587817441!3d40.86049807125235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd237b84a83a66f9%3A0xb394fd74f21b4951!2sCasa%20Valverde%20-%20Vale%20de%20Cambra!5e0!3m2!1spt-PT!2spt!4v1719222347874!5m2!1spt-PT!2spt"
@@ -123,7 +124,7 @@
             </div>
             <div class="contact-item">
                 <h3 class="inter-thin-small">EMAIL</h3>
-                <p class="libre-caslon-text-regular">contato@casavalverde.com</p>
+                <p class="libre-caslon-text-regular">reservas.casavalverde@gmail.com</p>
             </div>
             <div class="contact-item">
                 <h3 class="inter-thin-small">TELEFONE</h3>
@@ -149,6 +150,23 @@
         <img class="modal-content" id="modal-img">
     </div>
     <script src="script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const scrollToBottomLinks = document.querySelectorAll(".scroll-to-bottom");
+
+            scrollToBottomLinks.forEach(link => {
+                link.addEventListener("click", function (e) {
+                    e.preventDefault(); // Prevent the default anchor link behavior
+
+                    window.scrollTo({
+                        top: document.body.scrollHeight, // Scroll to the bottom of the page
+                        behavior: "smooth" // Enable smooth scrolling
+                    });
+                });
+            });
+        });
+
+    </script>
 </body>
 
 </html>
