--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <section class="banner">
         <div class="banner-text">
             <h1 class="libre-caslon-text-regular">Bem vindo, <br> à casa Valverde</h1>
-            <p class="inter-thin">Bem-vindos à Casa Valverde, um refúgio de tranquilidade apenas a poucos minutos da
+            <p class="inter-regular">Bem-vindos à Casa Valverde, um refúgio de tranquilidade apenas a poucos minutos da
                 Serra da Freita. O nosso alojamento oferece tudo o que necessita para uma estadia confortável e
                 memorável.</p>
         </div>
         <div class="banner-video">
-            <video autoplay muted>
+            <video autoplay muted controls>
                 <source src="https://fojeportfolio.s3.eu-north-1.amazonaws.com/Casa+Valverde.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -51,7 +51,7 @@
         </div>
         <div class="banner-text">
             <h1 class="libre-caslon-text-regular">O Nosso Espaço</h1>
-            <p class="inter-thin">Com um quarto espaçoso e acolhedor, um pátio para desfrutar do ar fresco da montanha,
+            <p class="inter-regular">Com um quarto espaçoso e acolhedor, um pátio para desfrutar do ar fresco da montanha,
                 uma cozinha totalmente equipada e uma casa de banho moderna, para além de uma espaçosa sala com um
                 confortável sofá-cama, terá espaço suficiente para relaxar e descontrair. Terá ainda acesso a Wi-Fi
                 gratuito e uma televisão para o seu entretenimento. Situada no meio da natureza, a Casa Valverde oferece
@@ -64,7 +64,7 @@
 
         <div class="banner-text">
             <h1 class="libre-caslon-text-regular">As Redondezas</h1>
-            <p class="inter-thin">Explore as maravilhas naturais da região, incluindo a Serra da Freita, a encantadora
+            <p class="inter-regular">Explore as maravilhas naturais da região, incluindo a Serra da Freita, a encantadora
                 aldeia de Trilhadouro e a impressionante Barragem Eng. Duarte Pacheco, todos a uma curta distância da
                 nossa casa. Venha desfrutar da paz e da beleza que a Casa Valverde tem para lhe oferecer.
             </p>
